fix header z-index

--- a/views/components/header/header.css
+++ b/views/components/header/header.css
@@ -33,7 +33,7 @@
     position: fixed;
     width: 100%;
     top: 0;
-    z-index: 8888;
+    z-index: 888;
 }
 
 .header .logo {
